WEB-13112: Bugfix: Corporate Page on Mobile

--- a/css/corporate.css
+++ b/css/corporate.css
@@ -1,4 +1,6 @@
 .corporate-content .header-img {
+    max-width: 100%;
+    height: auto;
     margin-bottom: 20px;
 }
 
@@ -107,6 +109,7 @@
     box-shadow: 0 2px 4px 0 rgba(230, 230, 230, 0.5);
     border: 1px solid #E6E6E6;
     position: relative;
+    max-width: 420px;
     width: 50%;
     height: 420px;
 }
@@ -135,7 +138,6 @@
     font-size: 16px;
     line-height: 46px;
     position: relative;
-    margin: 0 20px;
     padding: 0 30px;
     display: inline-block;
     background-color: #0BBDAA;
@@ -232,4 +234,155 @@ body:not(.mobile) .corporate.main-menu.item:hover span {
 
 .corporate-content .contact-us {
     padding: 78px 275px 315px 275px;
+}
+
+@media only screen and (max-width: 1060px) {
+    .corporate-content .media-page-overview {
+        padding: 50px 10vw 0;
+    }
+    .corporate-content .media-page-media-assets {
+        padding: 70px 0;
+    }
+}
+
+@media only screen and (max-width: 890px) {
+    .corporate-content .bottom-page.full-block.active blockquote {
+        padding: 0 65px;
+    }
+
+    .corporate-content .bottom-page.horizontal-centered-bl {
+        padding: 0 !important;
+    }
+
+    .corporate-content .new-bottom-pages h2 {
+        font-size: 34px;
+    }
+
+    .corporate-content .media-page-overview {
+        padding: 50px 0;
+    }
+
+    .corporate-content span.overview-info-lg {
+        font-size: 20px;
+        display: block;
+    }
+
+    .corporate-content .info-link {
+        font-size: 24px !important;
+    }
+
+    .corporate-content .media-page-key-features h2 {
+        padding: 70px 9vw;
+    }
+
+    .corporate-content .media-page-key-features .key-feature-part {
+        padding: 0 60px 10px;
+    }
+
+    .corporate-content .media-page-key-features .key-feature-part p.key-feature-text {
+        line-height: 23px;
+    }
+
+    .corporate-content .media-page-users-stats h2 {
+        padding: 100px 0 110px;
+    }
+
+    .corporate-content .lang {
+        padding: 0;
+    }
+
+    .corporate.numbers-info .num {
+        font-size: 49px
+    }
+
+    .corporate-content .media-page-users-stats {
+        height: 550px;
+    }
+
+    .corporate-content .media-asset-card div.media-asset-card-content {
+        padding: 35px 50px 50px
+    }
+
+    .corporate-content .contact-us {
+        padding: 78px 210px 315px;
+    }
+}
+
+@media only screen and (max-width: 783px) {
+    .corporate-content .media-page-overview .col-4 {
+        padding-bottom: 40px;
+    }
+
+    .corporate-content span.overview-info-sm {
+        margin: 10px 0 0;
+    }
+
+    .corporate-content span.overview-info-lg {
+        line-height: 0;
+    }
+
+    .corporate-content .numbers-info {
+        padding: 0 15px 50px;
+    }
+
+    .corporate.numbers-info .num {
+        font-size: 43px;
+    }
+
+    .corporate-content .media-page-users-stats h2 {
+        padding: 100px 0 90px;
+    }
+
+    .corporate-content .media-asset-card div.media-asset-card-content {
+        padding: 35px 25px 50px
+    }
+
+    .corporate-content .media-asset-card .media-asset-card-content p {
+        margin-bottom: 0;
+    }
+
+    .corporate-content div.media-asset-card {
+        display: block;
+        width: auto;
+        height: 390px;
+        max-width: 390px;
+        margin: 15px auto 0;
+    }
+
+    .corporate-content .contact-us {
+        padding: 78px 10vw 20vw;
+    }
+}
+
+@media only screen and (max-width: 569px) {
+    .corporate-content .media-page-key-features .key-feature-part {
+        padding: 0 0 10px;
+    }
+
+    .corporate-content .media-page-key-features h2 {
+        padding: 70px 0;
+    }
+
+    .corporate-content .media-page-key-features {
+        padding: 15px 10px 0;
+    }
+
+    .corporate-content .media-page-key-features .key-feature-part p.key-feature-text {
+        font-size: 20px !important;
+    }
+}
+
+@media only screen and (max-width: 419px) {
+    .corporate-content .bottom-page.full-block.active blockquote {
+        padding: 0;
+    }
+
+    .corporate.numbers-info .num {
+        font-size: 39px;
+    }
+
+    .corporate.numbers-info .numbers-txt {
+        font-size: 21px;
+        line-height: 16px;
+    }
 }
